# candy

./: CMakeLists.txt  Candy Crush automatizat.pptx  README.md  rezultate.csv
include/: FormaL.h  FormaT.h  Linie.h  Punct.h  config.h
src/: FormaL.cpp  FormaT.cpp  Linie.cpp  Punct.cpp  config.cpp  main.cpp
